@@ -35,3 +35,5 @@
 - US-#2: (for User Story #2)
 -       wrote middleware for validating date
 -       continued testing User Story #1; 6 tests still not passing
+-       imported 2 functions from front-end/utils/date-time.js 
+        to complete GET functions for /reservations route
